--- a/style.css
+++ b/style.css
@@ -31,3 +31,15 @@
     color: white;
     margin-top: 20px;
   }
+
+.footer{
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: wheat;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    font-size: 20px;
+    padding: 10px;
+}
